--- a/index.html
+++ b/index.html
@@ -1047,17 +1047,17 @@
 
             <div class="weddingCardFamily">
                 <div class="weddingCardFamilyGroup">
-                    <p style="font-weight: 700; font-size: 15px; color: #f4a261;">Mr. & Mrs. Sunil Zope</p>
+                    <p style="font-weight: 700; font-size: 15px; color: #f4a261;">Mr. & Mrs. Sunil Zope & Family</p>
                     <p style="font-size: 13px; color: #ddd; line-height: 1.5; margin-top: 6px;">request the honor of
-                        your presence<br>at the wedding ceremony of their son</p>
+                        your presence<br>at the wedding ceremony of our son</p>
                 </div>
 
                 <div class="weddingCardDivider">💍</div>
 
                 <div class="weddingCardFamilyGroup">
-                    <p style="font-weight: 700; font-size: 15px; color: #f4a261;">Hemant Jawale & Family</p>
+                    <p style="font-weight: 700; font-size: 15px; color: #f4a261;">Mr. & Mrs. Hemant Jawale & Family</p>
                     <p style="font-size: 13px; color: #ddd; line-height: 1.5; margin-top: 6px;">request the honor of
-                        your presence<br>at the wedding ceremony of their daughter</p>
+                        your presence<br>at the wedding ceremony of our daughter</p>
                 </div>
             </div>
 
@@ -1071,8 +1071,8 @@
         </div>
 
         <div class="date">
-            Saturday, 7th March 2026<br>
-            Night 8:30 PM
+            Saturday, March 7, 2026<br>
+            6:33 PM onwards
         </div>
 
         <div class="countdown" id="countdown"></div>
@@ -1117,32 +1117,45 @@
         <!-- WEDDING CEREMONY SUMMARY -->
         <div class="card">
             <h2>Wedding Ceremony</h2>
-            <p><b>Date:</b> Saturday, 7 March 2026</p>
-            <p><b>Time:</b> 8:30 PM onwards</p>
-            <p><b>Venue:</b> Jafar Lawns, Savda</p>
+            <p><b>Date:</b> Saturday, March 7, 2026</p>
+            <p><b>Time:</b> 6:33 PM onwards</p>
+            <p><b>Venue:</b> Jafar Lawns, Raver Road, Savda, Maharashtra 425502</p>
         </div>
 
         <!-- ALL FUNCTIONS / EVENTS SCHEDULE -->
+        <!-- VAIDIK WEDDING CEREMONY SUMMARY -->
         <div class="card">
-            <h2>Events Schedule</h2>
-            <p><b>Haldi Ceremony:</b> 6 March 2026 | 10:00 AM</p>
-            <p style="opacity:0.8; font-size:13px;">Jafar Lawns, Savda</p>
-            <p style="margin-top:10px;"><b>Mehendi:</b> 6 March 2026 | 4:00 PM</p>
-            <p style="opacity:0.8; font-size:13px;">Jafar Lawns, Savda</p>
-            <p style="margin-top:10px;"><b>Wedding Ceremony:</b> 7 March 2026 | 8:30 PM</p>
-            <p style="opacity:0.8; font-size:13px;">Jafar Lawns, Savda</p>
-            <p style="margin-top:10px;"><b>Reception &amp; Dinner:</b> 7 March 2026 | 10:00 PM onwards</p>
-            <p style="opacity:0.8; font-size:13px;">Jafar Lawns, Savda</p>
+            <h2>💍 Wedding Ceremony Schedule</h2>
+            <p><b>🌿 Mehendi & DJ Night:</b> Friday, March 6, 2026</p>
+            <p><b>🕕 Time:</b> 6:00 PM onwards</p>
+            <p><b>📍 Venue:</b> Makarang Nagar, Varangaon</p>
+            <div class="weddingCardDecorator weddingCardDecoratorBottom"></div>
+            <p><b>🌼 Haldi Ceremony:</b> Saturday, March 7, 2026</p>
+            <p><b>🕙 Time:</b> 08:30 AM onwards</p>
+            <p><b>📍 Venue:</b> Jafar Lawns, Savda</p>
+            <div class="weddingCardDecorator weddingCardDecoratorBottom"></div>
+            <p><b>🐎 Barat (Wedding Procession):</b> Saturday, March 7, 2026</p>
+            <p><b>🕓 Time:</b> 4:00 PM onwards</p>
+            <p><b>📍 Venue:</b> Jafar Lawns, Savda</p>
+            <div class="weddingCardDecorator weddingCardDecoratorBottom"></div>
+            <p><b>💐 Mangalashtak & Varmala:</b> Saturday, March 7, 2026</p>
+            <p><b>🕡 Time:</b> 6:33 PM onwards</p>
+            <p><b>📍 Venue:</b> Jafar Lawns, Savda</p>
+            <div class="weddingCardDecorator weddingCardDecoratorBottom"></div>
+            <p><b>🍽️ Reception & Dinner:</b> Saturday, March 7, 2026</p>
+            <p><b>🕣 Time:</b> 7:30 PM onwards</p>
+            <p><b>📍 Venue:</b> Jafar Lawns, Savda</p>
+            <div class="weddingCardDecorator weddingCardDecoratorBottom"></div>
         </div>
 
-        <!-- VENUE DETAILS -->
+        <!-- VENUE DETAILS  j -->
         <div class="card">
             <h2>Venue Details</h2>
-            <p><b>Venue Name:</b> Jafar Lawns, Savda</p>
-            <p><b>Address:</b> Near ABC Chowk, Savda, Maharashtra</p>
-            <p><b>Landmark:</b> Opposite City Mall</p>
+            <p><b>Venue Name:</b> Jafar Lawns, Raver Road, Savda, Maharashtra 425502</p>
+            <p><b>Address:</b> Near Gajanan hospital, Savda, Maharashtra</p>
+            <p><b>Landmark:</b> Opposite Shlok Pure Veg Family Restaurant & Lodging</p>
             <a href="https://maps.app.goo.gl/1YybRbZBQf4GUeXo7" target="_blank" class="mapBtn">
-                Open Location in Google Maps
+                📍 Open Location in Google Maps
             </a>
         </div>
 
@@ -1150,34 +1163,44 @@
         <div class="card">
             <h2>With Blessings Of</h2>
             <p><b>Groom Parents:</b><br>
-                Sunil Zope &amp; Vandana Zope<br>
-                Varangaon
+                Mr. Sunil &amp; Mrs. Vandana Zope<br>
+            <p><b>Contact No. :</b>&nbsp +91 8600692282<br>
+            <p><b>Address:</b><br>
+                Plot No: 26, Makarang Nagar<br>
+                Varangaon, Tah Bhusawal, Dist Jalgaon, Maharashtra 425305
             </p>
-            <br>
+            <div class="weddingCardDecorator weddingCardDecoratorBottom"></div>
+
             <p><b>Bride Parents:</b><br>
-                Hemant Jawale<br>
-                Bhalod
+                Mr. Hemant &amp; Mrs. Lalita Jawale<br>
+            <p><b>Contact No. :</b>&nbsp +91 9766077584<br>
+            <p><b>Address:</b><br>
+                Bhalod, Tah Yawal, Dist Jalgaon, Maharashtra 425305<br>
             </p>
         </div>
 
         <!-- ACCOMMODATION &amp; TRAVEL -->
         <div class="card">
             <h2>Accommodation &amp; Travel</h2>
-            <p><b>Airport:</b> Pune Airport (PNQ) - 45 km from venue</p>
+            <p><b>Airport:</b> Jalgaon Airport (JLG) - 48 km from venue</p>
             <p><b>Accommodation:</b> Recommended hotels nearby the venue</p>
             <p><b>Travel:</b> Cabs/Transport can be arranged on request</p>
             <p style="margin-top:8px; opacity:0.8; font-size:13px;">For accommodation &amp; travel assistance, please
-                contact Ashish.</p>
+                contact Ashish (+91 7744046830).</p>
         </div>
 
         <!-- RSVP &amp; CONTACT -->
         <div class="card">
             <h2>RSVP</h2>
-            <p>Please confirm your attendance by <b>25 February 2026</b>.</p>
-            <p style="margin-top:8px;"><b>Ashish Zope:</b> +91 77440 46830</p>
-            <p><b>Madhuri Patil:</b> +91 91234 56789</p>
-            <a href="https://wa.me/917744046830?text=Hello%20Ashish%20and%20Madhuri!%20I%20confirm%20my%20attendance."
-                target="_blank" class="mapBtn">RSVP on WhatsApp</a>
+            <p>Please confirm your gracious presence by <b>25 February 2026</b>.</p>
+
+            <p style="margin-top:8px;"><b>Ashish Zope:</b> +91 7744046830</p>
+            <!-- <p><b>Madhuri Patil:</b> +91 91234 56789</p> -->
+
+            <a href="https://wa.me/917744046830?text=Dear%20Ashish%20and%20Madhuri,%0A%0AIt%20is%20with%20great%20joy%20that%20I%20confirm%20my%20presence%20at%20your%20wedding%20ceremony.%20I%20am%20honored%20to%20be%20part%20of%20your%20beautiful%20and%20sacred%20union.%0A%0AWishing%20you%20both%20a%20lifetime%20of%20love,%20happiness,%20and%20togetherness.%0A%0ALooking%20forward%20to%20celebrating%20this%20special%20day%20with%20you.%20%F0%9F%92%8D%0A%0AWarm%20Regards,"
+                target="_blank" class="mapBtn">
+                Confirm Your Presence on WhatsApp 💬
+            </a>
         </div>
 
         <!-- SPECIAL NOTES &amp; GUIDANCE -->
@@ -1217,7 +1240,7 @@
 
         <p>We request the honor of your presence</p>
 
-        <p>7 March 2026 | 8:30 PM</p>
+        <p>7 March 2026 | 6:33 PM onwards</p>
 
         <button class="closeBtn" onclick="closePopup()">Close</button>
 
